--- a/xkcd.html
+++ b/xkcd.html
@@ -8,6 +8,14 @@
 <body>
 <div id="xkcd">
 </div>
+<!--[if !IE]><!-->
 <script src="http://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20data.html.cssselect%20where%20url%3D%22http%3A%2F%2Fdynamic.xkcd.com%2Frandom%2Fcomic%2F%22%20and%20%20css%3D%22%23comic%22&diagnostics=false&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&callback=xkcdfunction"></script>
+<!--<![endif]-->
+
+<!--[if IE]><!-->
+<script>//fallback();</script>
+<!--<![endif]-->
+
+
 </body>
 </html>
