--- a/xkcd.html
+++ b/xkcd.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+
 	<title>Random XKCD generator</title> 
 	<meta name="description" content="Fetches a random XKCD comic. Works cross domain using YQL.">
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8">
@@ -8,14 +9,14 @@
 <body>
 <div id="xkcd">
 </div>
-<!--[if !IE]><!-->
+
+<script>
+if (Function('/*@cc_on return document.documentMode===10@*/')()){
+      window.location.href = 'http://imgs.xkcd.com/comics/exploits_of_a_mom.png'; 
+}
+</script>
+
 <script src="http://query.yahooapis.com/v1/public/yql?q=select%20*%20from%20data.html.cssselect%20where%20url%3D%22http%3A%2F%2Fdynamic.xkcd.com%2Frandom%2Fcomic%2F%22%20and%20%20css%3D%22%23comic%22&diagnostics=false&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&callback=xkcdfunction"></script>
-<!--<![endif]-->
-
-<!--[if IE]><!-->
-<script>//fallback();</script>
-<!--<![endif]-->
-
 
 </body>
 </html>
